# iuliia-py

./: .flake8  .gitmodules  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  coverage.sh  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: build.yml
iuliia/: __init__.py  __main__.py  alalc.py  bgnpcgn.py  bs2979.py  engine.py  gost16876.py  gost52290.py  gost52535.py  gost7034.py  gost779.py  icaodoc9303.py  iso91954.py  iso91968.py  lazy.py  mapping.py  mvd310.py  mvd782.py  nlp.py  repo.py  schema.py  schemas.py  scientific.py  telegram.py  ungegn1987.py  validator.py  wikipedia.py  yandexmaps.py  yandexmoney.py
iuliia/schemas/: __init__.py  alalc.py  bgnpcgn.py  bs2979.py  gost16876.py  gost52290.py  gost52535.py  gost7034.py  gost779.py  icaodoc9303.py  iso91954.py  iso91968.py  mvd310.py  mvd782.py  scientific.py  telegram.py  ungegn1987.py  wikipedia.py  yandexmaps.py  yandexmoney.py
tests/: test_engine.py  test_file_repo.py  test_file_schema.py  test_gost_52290.py  test_lazy.py  test_map.py  test_mapping.py  test_mvd_782.py  test_nlp.py  test_schema.py  test_schema_definition.py  test_schemas.py  test_scientific.py  test_timing.py  test_translate.py  test_validator.py  test_wikipedia.py  test_yandex_money.py
tests/schemas/: test_ala_lc.py  test_bgn_pcgn.py  test_bs_2979.py  test_gost_16876.py  test_gost_52535.py  test_gost_7034.py  test_gost_779.py  test_icao_doc_9303.py  test_iso_9_1954.py  test_iso_9_1968.py  test_mvd_310.py  test_mvd_782.py  test_schemas.py  test_telegram.py  test_ungegn_1987.py  test_wikipedia.py  (+2 more)
