[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iuliia"
version = "0.13.0"
description = "Transliterate Cyrillic → Latin in every possible way"
keywords = ["transliteration", "cyrillic", "latin", "romanization"]
authors = [
    {name = "Anton Zhiyanov", email = "m@antonz.ru"},
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Source = "https://github.com/nalgeon/iuliia-py"

[project.scripts]
iuliia = "iuliia.__main__:main"

[tool.black]
line-length = 100
